--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,8 @@ export(use_val_labs)
 export(use_var_names)
 export(uvl)
 export(uvn)
+export(val_labs_vec)
+export(vlv)
 export(wbl)
 export(with_both_labs)
 export(with_name_labs)
