#fix functions that had internal set.seed() calls, so that they no longer do (user can call set.seed() prior to running these functions #these are: somel(), and the two make_* functions #fix examples that used earlier iterations of these three functions (in .Rd and the vignettes) #misc typos and nits to the vignettes fixed

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: labelr
-Title: Tools for Working with Data Frame, Variable, and Value Labels
-Version: 1.0.0 
+Title: Label Data Frames, Variables, and Values
+Version: 0.1.0 
 Authors@R: c(person("Robert", "Hartman", "", email = "rohartman@gmail.com", role = c("aut", "cre")), person("The MITRE Corporation", role = "cph"))
 Maintainer: Robert Hartman <rohartman@gmail.com>
-Description: Lightweight tools to create and use different types of data.frame labels.
+Description: Tools to create and work with different types of data frame labels.
 License: GPL (>= 3) + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
