#axis_lab() function added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(add_quant_labs)
 export(add_val1)
 export(add_val_labs)
 export(afl)
+export(alb)
 export(am1l)
 export(anl)
 export(aql)
@@ -21,6 +22,7 @@ export(as_num)
 export(as_numv)
 export(avl)
 export(avl1)
+export(axis_lab)
 export(check_any_lab_atts)
 export(check_class)
 export(check_irregular)
