--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ RoxygenNote: 7.3.0
 Depends: R (>= 4.0.0)
 Imports: stats, utils
 Suggests: knitr, rmarkdown, car, nycflights13, collapse, tibble, haven,
-        dplyr, modelr
+        dplyr, modelr, ggplot2
 VignetteBuilder: knitr
 NeedsCompilation: no
 Packaged: 2024-01-20 21:54:39 UTC; rohar
