#added functions for converting labeled integer to factor and vice versa

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,8 @@ export(drop_val1)
 export(drop_val_labs)
 export(dvl)
 export(dvl1)
+export(f2int)
+export(factor_to_lab_int)
 export(flab)
 export(get_all_factors)
 export(get_all_lab_atts)
@@ -55,8 +57,10 @@ export(gvl)
 export(has_decv)
 export(headl)
 export(init_labs)
+export(int2f)
 export(irregular2v)
 export(is_numable)
+export(lab_int_to_factor)
 export(make_demo_data)
 export(make_likert_data)
 export(recode_vals)
