#update NAMESPACE and man/ via devtools::document()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ export(add_factor_info)
 export(add_frame_lab)
 export(add_lab_atts)
 export(add_lab_cols)
+export(add_lab_dumm1)
+export(add_lab_dummies)
 export(add_m1_lab)
 export(add_name_labs)
 export(add_quant1)
@@ -13,6 +15,8 @@ export(add_val1)
 export(add_val_labs)
 export(afl)
 export(alb)
+export(ald)
+export(ald1)
 export(am1l)
 export(anl)
 export(aql)
