#improve error handling in add_lab_cols and use_val_labs, new function add_lab_col1, alias added for add_lab_cols, improving documentation on these

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add1m1)
 export(add_factor_info)
 export(add_frame_lab)
 export(add_lab_atts)
+export(add_lab_col1)
 export(add_lab_cols)
 export(add_lab_dumm1)
 export(add_lab_dummies)
@@ -15,6 +16,8 @@ export(add_val1)
 export(add_val_labs)
 export(afl)
 export(alb)
+export(alc)
+export(alc1)
 export(ald)
 export(ald1)
 export(am1l)
