#add use_val_lab1 and make select documentation copy edits, and insertions/edits to NEWs and first vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,9 +94,11 @@ export(taill)
 export(transfer_labs)
 export(unl)
 export(use_name_labs)
+export(use_val_lab1)
 export(use_val_labs)
 export(use_var_names)
 export(uvl)
+export(uvl1)
 export(uvn)
 export(val_labs_vec)
 export(vlv)
