#add all_quant_labs and tab_labs and update documentation accordingly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,8 @@ export(alc)
 export(alc1)
 export(ald)
 export(ald1)
+export(all_quant_labs)
+export(allq)
 export(am1l)
 export(anl)
 export(aql)
@@ -89,7 +91,9 @@ export(sselect)
 export(ssort)
 export(ssubset)
 export(strip_labs)
+export(tab_labs)
 export(tabl)
+export(tabl2)
 export(taill)
 export(transfer_labs)
 export(unl)
