#add get_val_lab1() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,12 +57,14 @@ export(get_factor_info)
 export(get_frame_lab)
 export(get_labs_att)
 export(get_name_labs)
+export(get_val_lab1)
 export(get_val_labs)
 export(gfl)
 export(gnl)
 export(greml)
 export(gremlr)
 export(gvl)
+export(gvl1)
 export(has_decv)
 export(headl)
 export(init_labs)
