#add has_*() functions and all_vals_uniquev()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,8 @@ export(alc1)
 export(ald)
 export(ald1)
 export(all_quant_labs)
+export(all_univ)
+export(all_vals_uniquev)
 export(allq)
 export(am1l)
 export(anl)
@@ -66,7 +68,13 @@ export(gremlr)
 export(gvl)
 export(gvl1)
 export(has_decv)
+export(has_m1_labs)
+export(has_quant_labs)
+export(has_val_labs)
 export(headl)
+export(hm1l)
+export(hql)
+export(hvl)
 export(init_labs)
 export(int2f)
 export(irregular2v)
