--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,8 +21,8 @@ export(alc1)
 export(ald)
 export(ald1)
 export(all_quant_labs)
+export(all_uniquev)
 export(all_univ)
-export(all_vals_uniquev)
 export(allq)
 export(am1l)
 export(anl)
@@ -67,6 +67,8 @@ export(greml)
 export(gremlr)
 export(gvl)
 export(gvl1)
+export(h11l)
+export(has_avl_labs)
 export(has_decv)
 export(has_m1_labs)
 export(has_quant_labs)
