#add fact2char() and irregular2()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ export(hql)
 export(hvl)
 export(init_labs)
 export(int2f)
+export(irregular2)
 export(irregular2v)
 export(is_numable)
 export(lab_int_to_factor)
