#add as_base_data_frame() alias and as_base_data_frame2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(add_quant1)
 export(add_quant_labs)
 export(add_val1)
 export(add_val_labs)
+export(adf)
+export(adf2)
 export(afl)
 export(alb)
 export(alc)
@@ -29,6 +31,7 @@ export(anl)
 export(aql)
 export(aql1)
 export(as_base_data_frame)
+export(as_base_data_frame2)
 export(as_num)
 export(as_numv)
 export(avl)
