#fix slab() syntax error in vignette and export bug in fact2char()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,7 +52,9 @@ export(drop_val1)
 export(drop_val_labs)
 export(dvl)
 export(dvl1)
+export(f2c)
 export(f2int)
+export(fact2char)
 export(factor_to_lab_int)
 export(flab)
 export(get_all_factors)
